--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "tedious": "^16.0.0"
   },
   "devDependencies": {
     "sqlite3": "^5.1.6"
